--- a/Resources.resx
+++ b/Resources.resx
@@ -117,11 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="QrCode" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>icon.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="QRCode_Note" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>QRCodeAny-Note.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,5 +132,11 @@
   </data>
   <data name="QRCode_User" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>QRCodeAny-User.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="QRAll" xml:space="preserve">
+    <value>QR All</value>
+  </data>
+  <data name="QRPassword" xml:space="preserve">
+    <value>QR Password</value>
   </data>
 </root>
